--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="AKZ Advokátní kancelář v Libereckém kraji a okolí, Zrnovský & Zrnovská"
     />
+    <meta
+      name="google-site-verification"
+      content="bXgIJloNwCWtddZ84uo-xkMdwcD5EKCzRCq_kzKAiqk"
+    />
     <title>AKZ Advokátní kancelář Zrnovský & Zrnovská</title>
   </head>
   <body>
