--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AKZ Advokátní kancelář v Libereckém kraji a okolí, Zrnovský & Zrnovská"
+      content="AKZ advokátní kancelář Zrnovský & Zrnovská - Spolehlivá právní pomoc v Liberci, Jablonci a celém Libereckém kraji. S dlouholetými zkušenostmi v právní pomoci a zastupování klientů v soudním řízení, jsme jednou z historicky nejstabilnějších advokátních kanceláří v Libereckém kraji. Naši advokáti Mgr. Jan Zrnovský a Mgr. et Mgr. Lucie Zrnovská jsou tu, abyste v tíživých životních situacích získali kompetentní a profesionální pomoc. Spolehněte se na nás pro řešení vašich právních potřeb."
     />
     <meta
       name="google-site-verification"
